# learn-python

./: .gitignore  Callable.ipynb  Data_Classes.ipynb  Pandas.ipynb  Projects_in_Python.ipynb  agentic-ai.md  data_classes.py  main.ipynb  main.py  markdown.md  object_oriented_programming.ipynb  private_protected.py  projects_in_python.py  readme.md  starting_code.md  test.ipynb  test.py
15_streaming_openai/: main.py  pyproject.toml
Agentic Work/05_uv_crewai-router/: pyproject.toml
Agentic Work/07_openrouter/: pyproject.toml
Agentic Work/09_chatcompletion_api/: .env
Agentic Work/10_openai_agents_chainlit/: .gitignore
Agentic Work/11_agent_sdk/: pyproject.toml
agentic_work/: readme.md
agentic_work/09_chatcompletion_api/: main.py  streaming.py
agentic_work/11_agent_sdk/: .env  deepseek.py  hello_agent.py  main.py
agentic_work/11_agent_sdk_starter/: deepseek.py  hello_agent.py  pyproject.toml
agentic_work/12_tavily_openai/: main.py  pyproject.toml  tools.py
agentic_work/13_context/: dynamic_instructions.py  main.py
agentic_work/13_local_context_openai/: main.py  pyproject.toml
agentic_work/13a_context/: pyproject.toml
agentic_work/13b_dynamic_instructions/: excercise1.py  hello.py
agentic_work/14_model_settings/: README.md  main.py  model_settings.py  pyproject.toml
agentic_work/15_streaming_openai/: agent.py  main.py
agentic_work/16_cloning_agent/: main.py
agentic_work/16_cloning_tracing/: README.md  excercise1.py  main.py  main2.py  pyproject.toml
agentic_work/17_agent_as_tool/: main.py  pyproject.toml
agentic_work/18_handoffs/: 01_advance_handoff.py  02_advance_handoff.py  03_input_filter.py  04_is_enabled.py  advance_handoff.py  basic_handoff.py  main.py  pyproject.toml
agentic_work/19_advance_tools/: main.py  main2.py  pyproject.toml  tool_use.py
agentic_work/20_structured_output/: excercise.py  main.py  pyproject.toml
agentic_work/21_guardrails/: main.py  pyproject.toml
agentic_work/22_agent_lifecycle/: main.py  pyproject.toml
agentic_work/23_runner_lifecycle/: chat_loop.py  main.py  pyproject.toml
agentic_work/24_session_memory/: general_test.db  main.py  memory.py  pyproject.toml
agentic_work/25_memory/: main.py  pyproject.toml
agentic_work/26_chainlit/: README.md  context.py  converstation_db  main.py  main2.py  pyproject.toml  streaming.py  with_tools.py
agentic_work/27_external_tracing/: main.py  pyproject.toml
agentic_work/28_custom_runner/: main.py  pyproject.toml
fastapi/: readme.md
fastapi/00_hello/: README.md  hello_message.py  main.py  pyproject.toml  test_hello_message.py  test_main.py
fastapi/01_hello/: main.py  pyproject.toml  test_main.py
fastapi/02_path_query_parameters/: .gitignore  main.py  pyproject.toml  test_main.py
fastapi/03_openai-agents/: .env  main.py  pyproject.toml
fastapi/04_fastapi/: main.py  pyproject.toml
fastapi/04_neon_todo/: .env  README.md  main.py  pyproject.toml  settings.py  test_main.py
fastapi/05_response_body/: crud.py  pyproject.toml  response.py
fastapi/06_crud/: README.md  database.py  main.py  models.py  pyproject.toml  simple_crud.py
fastapi/07_authentication/: db.py  main.py  pyproject.toml
fastapi/07_authentication/core/: config.py  dependency.py  security.py
fastapi/07_authentication/models/: user.py
fastapi/07_authentication/routers/: users.py
fastapi/07_authentication/schema/: user.py
modern-python/: Callable.ipynb  Data_Classes.ipynb  immutable_dataclass.ipynb  object_oriented_programming.ipynb
modern_python/: Callable.ipynb  ClassMethod.py  Decorataor.ipynb  Generics.ipynb  asyncio.ipynb  asyncio.py  basic.ipynb  bitwise_operator.ipynb  copy.py  data_classes.py  main.ipynb  main.py  match-case.py  math.py
modern_python/projects/: convert-temperature.py  main.py  (+1 more)
openai_agent_sdk/: -00_openai_chatcompletion_responses.ipynb  .env  00_openai_hello_world.ipynb  00_openai_litellm.ipynb  01_openai_agents_litellm.ipynb  02_openai_agents_mutliagents.ipynb  04_guardrails.ipynb  05_tool_as_behaviour.ipynb  06_agent_tool_settings.ipynb
openrouter/: openai_sdk.ipynb  openrouter_openai_sdk.ipynb
uv-python/uv-02/: pyproject.toml
uv-python/uv-02/src/uv_02/: hello.py
uv-python/uv-03/: pyproject.toml
uv-python/uv-03/src/uv_03/: __init__.py  main.py
uv-python/uv-03/src/uv_03/crews/config/: agents.yaml  tasks.yaml
uv-python/uv-03/src/uv_03/crews/teaching/: teaching_crew.py
uv-python/uv-chainlit/: pyproject.toml
uv-python/uv-chainlit/src/uv_chainlit/: __init__.py
uv-python/uv-crewai/: pyproject.toml
uv-python/uv-crewai/src/uv_crewai/: main1.py
uv/06_uv_litellm/: pyproject.toml
uv/06_uv_litellm/src/uv_litellm/: __init__.py
(+25 files in other folders)
