[project]
name = "uv-crewai-router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mustafatawab", email = "engrmustafatawab05@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.118.0",
]

[project.scripts]
uv-crewai-router = "uv_crewai_router:main"
router = "uv_crewai_router.main:kickoff"
router_plot = "uv_crewai_router.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
