[project]
name = "01-openrouter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mustafatawab", email = "engrmustafatawab05@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.19",
]

[project.scripts]
01-openrouter = "01_openrouter:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
