[project]
name = "uv-02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mustafatawab", email = "engrmustafatawab05@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
uv-02 = "uv_02:main"
karachi = "uv_02.hello:printDict"

piaic = "uv_02.piaic.file:piaic"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
