[project]
name = "uv-litellm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mustafatawab", email = "engrmustafatawab05@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.67.5",
]

[project.scripts]
uv-litellm = "uv_litellm:main"
piaic = "uv_litellm.main:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
